--- a/index.html
+++ b/index.html
@@ -7,20 +7,30 @@
   <link rel="stylesheet" href="app.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <nav class="container">
+    <nav class="nav-menu container">
       <div class="logo">
-        <span>Header Logo</span>
+        <span class="logo-text">Header Logo</span>
       </div>
-      <ul class="links">
-        <li class="nav-link">header link one</li>
-        <li class="nav-link">header link two</li>
-        <li class="nav-link">header link three</li>
+      <ul class="nav-links">
+        <li class="nav-link"><a href="#">header link one</a></li>
+        <li class="nav-link"><a href="#">header link two</a></li>
+        <li class="nav-link"><a href="#">header link three</a></li>
       </ul>
     </nav>
+    <div class="hero container">
+      <div class="hero-text">
+        <h1 class="hero-main-text">This website is awesome</h1>
+        <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
+        <a href="#" class="sign-up-button">Sign up</a>
+      </div>
+      <div class="hero-image">
+        <p>This is a placeholder for an image</p>
+      </div>
+    </div>
   </header>
 </body>
 </html>
