--- a/index.html
+++ b/index.html
@@ -32,5 +32,28 @@
       </div>
     </div>
   </header>
+  <main>
+    <section class="info-section">
+      <h2 class="info-header-text">Some random information.</h2>
+      <div class="info-items">
+        <div class="info-item">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-item">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-item">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-item">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
