Create and style testimonial section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         </div>
       </div>
     </section>
+    <section class="testimonial-section">
+      <div class="container testimonial">
+        <p class="quote">
+          This is an inspiring quote, or a testomonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p class="quote-author">-Thor, God of Thunder</p>
+      </div>
+    </section>
   </main>
 </body>
 </html>
