Create and style call to action section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
         <p class="quote-author">-Thor, God of Thunder</p>
       </div>
     </section>
+    <section class="cta-section">
+      <div class="container cta-card">
+        <div class="cta-text">
+          <p class="cta-primary-text">
+            Call to action! It's time!
+          </p>
+          <p class="cta-secondary-text">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <a href="#" class="cta-sign-up-button">Sign up</a>
+      </div>
+    </section>
   </main>
 </body>
 </html>
