Create and style footer

--- a/index.html
+++ b/index.html
@@ -74,5 +74,8 @@
       </div>
     </section>
   </main>
+  <footer>
+    <p class="footer-text">Copyright &#169; The Odin Project 2025</p>
+  </footer>
 </body>
 </html>
